force-app/main/default/objects/Flow_error_event__e/Flow_error_event__e.object-meta.xml
<CustomObject>
    <label>Flow Error Event</label>
    <pluralLabel>Flow Error Events</pluralLabel>
</CustomObject>