force-app/main/default/objects/Flow_error_event__e/fields/Error_Log_Name_c__c.field-meta.xml
<CustomField>
    <fullName>Error_Log_Name_c__c</fullName>
    <label>Error_Log_Name_c</label>
    <length>80</length>
    <type>Text</type>
</CustomField>