force-app/main/default/objects/Flow_error_event__e/fields/Severity_c__c.field-meta.xml
<CustomField>
    <fullName>Severity_c__c</fullName>
    <label>Severity_c</label>
    <length>255</length>
    <type>Text</type>
</CustomField>