force-app/main/default/objects/Flow_error_event__e/fields/Source_c__c.field-meta.xml
<CustomField>
    <fullName>Source_c__c</fullName>
    <label>Source_c</label>
    <length>255</length>
    <type>Text</type>
</CustomField>