force-app/main/default/objects/Flow_error_event__e/fields/Source_Element_c__c.field-meta.xml
<CustomField>
    <fullName>Source_Element_c__c</fullName>
    <label>Source_Element_c</label>
    <length>80</length>
    <type>Text</type>
</CustomField>