force-app/main/default/objects/Flow_error_event__e/fields/Stack_Trace_c__c.field-meta.xml
<CustomField>
    <fullName>Stack_Trace_c__c</fullName>
    <label>Stack_Trace_c</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>